vox/rust/roam-macros-core/src/snapshots/roam_macros_core__tests__method_retry_helper_attributes.snap
---
source: rust/roam-macros-core/src/lib.rs
expression: "generate(quote!\n{\n    trait Billing\n    {\n        #[roam(idem)] async fn get_balance(&self, account: String) -> u64;\n        #[roam(persist)] async fn send_money(&self, from: String, to: String)\n        -> Result<u64, TransferError>;\n    }\n})"
---
#[allow(non_snake_case, clippy::all)]
pub fn billing_service_descriptor() -> &'static ::roam::session::ServiceDescriptor {
    static DESCRIPTOR: std::sync::OnceLock<&'static ::roam::session::ServiceDescriptor> =
        std::sync::OnceLock::new();
    DESCRIPTOR.get_or_init(|| {
        let methods: Vec<&'static ::roam::session::MethodDescriptor> = vec![
            ::roam::hash::method_descriptor_with_retry::<(String,), u64>(
                "Billing",
                "get_balance",
                &["account"],
                None,
                ::roam::RetryPolicy {
                    persist: false,
                    idem: true,
                },
            ),
            ::roam::hash::method_descriptor_with_retry::<
                (String, String),
                Result<u64, TransferError>,
            >(
                "Billing",
                "send_money",
                &["from", "to"],
                None,
                ::roam::RetryPolicy {
                    persist: true,
                    idem: false,
                },
            ),
        ];
        Box::leak(Box::new(::roam::session::ServiceDescriptor {
            service_name: "Billing",
            methods: Box::leak(methods.into_boxed_slice()),
            doc: None,
        }))
    })
}
pub trait Billing
where
    Self: Send + Sync,
{
    fn get_balance(&self, account: String) -> impl std::future::Future<Output = u64> + Send;
    fn send_money(
        &self,
        from: String,
        to: String,
    ) -> impl std::future::Future<Output = Result<u64, TransferError>> + Send;
}
#[doc = r" Dispatcher for this service."]
#[doc = r""]
#[doc = r" Wraps a handler and implements [`#roam::Handler`] by routing incoming"]
#[doc = r" calls to the appropriate trait method by method ID."]
#[derive(Clone)]
pub struct BillingDispatcher<H> {
    handler: H,
    middlewares: Vec<::std::sync::Arc<dyn ::roam::ServerMiddleware>>,
}
impl<H> BillingDispatcher<H>
where
    H: Billing + Clone + Send + Sync + 'static,
{
    #[doc = r" Create a new dispatcher wrapping the given handler."]
    pub fn new(handler: H) -> Self {
        Self {
            handler,
            middlewares: vec![],
        }
    }
    #[doc = r" Append a server middleware to this dispatcher."]
    pub fn with_middleware(mut self, middleware: impl ::roam::ServerMiddleware) -> Self {
        self.middlewares.push(::std::sync::Arc::new(middleware));
        self
    }
    async fn run_pre_hooks(&self, context: &::roam::RequestContext<'_>) {
        for middleware in &self.middlewares {
            middleware.pre(context).await;
        }
    }
    async fn run_post_hooks(
        &self,
        context: &::roam::RequestContext<'_>,
        outcome: ::roam::ServerCallOutcome,
    ) {
        for middleware in self.middlewares.iter().rev() {
            middleware.post(context, outcome).await;
        }
    }
}
impl<H, R> ::roam::Handler<R> for BillingDispatcher<H>
where
    H: Billing + Clone + Send + Sync + 'static,
    R: ::roam::ReplySink,
{
    fn retry_policy(&self, method_id: ::roam::MethodId) -> ::roam::RetryPolicy {
        if method_id == billing_service_descriptor().methods[0usize].id {
            return ::roam::RetryPolicy {
                persist: false,
                idem: true,
            };
        }
        if method_id == billing_service_descriptor().methods[1usize].id {
            return ::roam::RetryPolicy {
                persist: true,
                idem: false,
            };
        }
        ::roam::RetryPolicy::VOLATILE
    }
    async fn handle(
        &self,
        call: ::roam::SelfRef<::roam::RequestCall<'static>>,
        reply: R,
        schemas: ::std::sync::Arc<::roam::SchemaRecvTracker>,
    ) {
        let method_id = call.method_id;
        let args_bytes = match &call.args {
            ::roam::Payload::PostcardBytes(bytes) => bytes,
            _ => {
                reply
                    .send_error(
                        ::roam::RoamError::<::core::convert::Infallible>::InvalidPayload(
                            "args not PostcardBytes".into(),
                        ),
                    )
                    .await;
                return;
            }
        };
        if method_id == billing_service_descriptor().methods[0usize].id {
            let deser_result = if let Some(binder) = reply.channel_binder() {
                ::roam::with_channel_binder(binder, || {
                    ::roam::schema_deser::schema_deserialize_args_borrowed(
                        args_bytes, method_id, &schemas,
                    )
                })
            } else {
                ::roam::schema_deser::schema_deserialize_args_borrowed(
                    args_bytes, method_id, &schemas,
                )
            };
            let args: (String,) = match deser_result {
                Ok(v) => v,
                Err(e) => {
                    ::std::eprintln!(
                        "[rpc] dispatch args decode failed: method={:?} error={}",
                        method_id,
                        e
                    );
                    reply
                        .send_typed_error::<u64, ::core::convert::Infallible>(::roam::RoamError::<
                            ::core::convert::Infallible,
                        >::InvalidPayload(
                            e.to_string()
                        ))
                        .await;
                    return;
                }
            };
            ::std::eprintln!("[rpc] dispatch invoking method={:?}", method_id);
            let (account,) = args;
            let extensions = ::roam::Extensions::new();
            let context = ::roam::RequestContext::with_extensions(
                billing_service_descriptor().methods[0usize],
                &call.metadata,
                &extensions,
            );
            if !self.middlewares.is_empty() {
                self.run_pre_hooks(&context).await;
            }
            let (reply, outcome_handle) = ::roam::observe_reply(reply);
            let value = self.handler.get_balance(account).await;
            let sink_call = ::roam::SinkCall::new(reply);
            ::roam::Call::<'_, u64, ::core::convert::Infallible>::ok(sink_call, value).await;
            if !self.middlewares.is_empty() {
                self.run_post_hooks(&context, outcome_handle.outcome())
                    .await;
            }
            return;
        }
        if method_id == billing_service_descriptor().methods[1usize].id {
            let deser_result = if let Some(binder) = reply.channel_binder() {
                ::roam::with_channel_binder(binder, || {
                    ::roam::schema_deser::schema_deserialize_args_borrowed(
                        args_bytes, method_id, &schemas,
                    )
                })
            } else {
                ::roam::schema_deser::schema_deserialize_args_borrowed(
                    args_bytes, method_id, &schemas,
                )
            };
            let args: (String, String) = match deser_result {
                Ok(v) => v,
                Err(e) => {
                    ::std::eprintln!(
                        "[rpc] dispatch args decode failed: method={:?} error={}",
                        method_id,
                        e
                    );
                    reply
                        .send_typed_error::<u64, ::core::convert::Infallible>(::roam::RoamError::<
                            ::core::convert::Infallible,
                        >::InvalidPayload(
                            e.to_string()
                        ))
                        .await;
                    return;
                }
            };
            ::std::eprintln!("[rpc] dispatch invoking method={:?}", method_id);
            let (from, to) = args;
            let extensions = ::roam::Extensions::new();
            let context = ::roam::RequestContext::with_extensions(
                billing_service_descriptor().methods[1usize],
                &call.metadata,
                &extensions,
            );
            if !self.middlewares.is_empty() {
                self.run_pre_hooks(&context).await;
            }
            let (reply, outcome_handle) = ::roam::observe_reply(reply);
            let result = self.handler.send_money(from, to).await;
            let sink_call = ::roam::SinkCall::new(reply);
            ::roam::Call::<'_, u64, TransferError>::reply(sink_call, result).await;
            if !self.middlewares.is_empty() {
                self.run_post_hooks(&context, outcome_handle.outcome())
                    .await;
            }
            return;
        }
        reply
            .send_error(::roam::RoamError::<::core::convert::Infallible>::UnknownMethod)
            .await;
    }
}
#[doc = "Client for the `Billing` service.\n\nStores a type-erased [`Caller`](:: roam::Caller) implementation."]
#[must_use = "Dropping this client may close the connection if it is the last caller."]
#[derive(Clone)]
pub struct BillingClient {
    caller: ::roam::ErasedCaller,
}
impl BillingClient {
    #[doc = r" Create a new client wrapping the given caller."]
    pub fn new(caller: impl ::roam::Caller) -> Self {
        Self {
            caller: ::roam::ErasedCaller::new(caller),
        }
    }
    #[doc = r" Append a client middleware to this client."]
    pub fn with_middleware(self, middleware: impl ::roam::ClientMiddleware) -> Self {
        Self {
            caller: self
                .caller
                .with_middleware(billing_service_descriptor(), middleware),
        }
    }
    #[doc = r" Resolve when the underlying connection closes."]
    pub async fn closed(&self) {
        ::roam::Caller::closed(&self.caller).await;
    }
    #[doc = r" Return whether the underlying connection is still considered connected."]
    pub fn is_connected(&self) -> bool {
        ::roam::Caller::is_connected(&self.caller)
    }
    pub async fn get_balance(&self, account: String) -> Result<u64, ::roam::RoamError> {
        let method_id = billing_service_descriptor().methods[0usize].id;
        let args = (account,);
        let req = ::roam::RequestCall {
            method_id,
            args: ::roam::Payload::outgoing(&args),
            metadata: Default::default(),
            schemas: Default::default(),
        };
        let with_tracker = ::roam::Caller::call(&self.caller, req)
            .await
            .map_err(|e| match e {
                ::roam::RoamError::UnknownMethod => {
                    ::roam::RoamError::<::core::convert::Infallible>::UnknownMethod
                }
                ::roam::RoamError::InvalidPayload(msg) => {
                    ::roam::RoamError::<::core::convert::Infallible>::InvalidPayload(msg)
                }
                ::roam::RoamError::Cancelled => {
                    ::roam::RoamError::<::core::convert::Infallible>::Cancelled
                }
                ::roam::RoamError::ConnectionClosed => {
                    ::roam::RoamError::<::core::convert::Infallible>::ConnectionClosed
                }
                ::roam::RoamError::SessionShutdown => {
                    ::roam::RoamError::<::core::convert::Infallible>::SessionShutdown
                }
                ::roam::RoamError::SendFailed => {
                    ::roam::RoamError::<::core::convert::Infallible>::SendFailed
                }
                ::roam::RoamError::Indeterminate => {
                    ::roam::RoamError::<::core::convert::Infallible>::Indeterminate
                }
                ::roam::RoamError::User(never) => match never {},
            })?;
        let ::roam::WithTracker {
            value: response,
            tracker: schema_tracker,
        } = with_tracker;
        let ret_bytes = match &response.ret {
            ::roam::Payload::PostcardBytes(bytes) => bytes,
            _ => {
                return Err(
                    ::roam::RoamError::<::core::convert::Infallible>::InvalidPayload(
                        "response not PostcardBytes".into(),
                    ),
                );
            }
        };
        let result: Result<u64, ::roam::RoamError<::core::convert::Infallible>> =
            ::roam::schema_deser::schema_deserialize_response(
                ret_bytes,
                method_id,
                &schema_tracker,
            )
            .map_err(|e| {
                ::roam::RoamError::<::core::convert::Infallible>::InvalidPayload(e.to_string())
            })?;
        result
    }
    pub async fn send_money(
        &self,
        from: String,
        to: String,
    ) -> Result<u64, ::roam::RoamError<TransferError>> {
        let method_id = billing_service_descriptor().methods[1usize].id;
        let args = (from, to);
        let req = ::roam::RequestCall {
            method_id,
            args: ::roam::Payload::outgoing(&args),
            metadata: Default::default(),
            schemas: Default::default(),
        };
        let with_tracker = ::roam::Caller::call(&self.caller, req)
            .await
            .map_err(|e| match e {
                ::roam::RoamError::UnknownMethod => {
                    ::roam::RoamError::<TransferError>::UnknownMethod
                }
                ::roam::RoamError::InvalidPayload(msg) => {
                    ::roam::RoamError::<TransferError>::InvalidPayload(msg)
                }
                ::roam::RoamError::Cancelled => ::roam::RoamError::<TransferError>::Cancelled,
                ::roam::RoamError::ConnectionClosed => {
                    ::roam::RoamError::<TransferError>::ConnectionClosed
                }
                ::roam::RoamError::SessionShutdown => {
                    ::roam::RoamError::<TransferError>::SessionShutdown
                }
                ::roam::RoamError::SendFailed => ::roam::RoamError::<TransferError>::SendFailed,
                ::roam::RoamError::Indeterminate => {
                    ::roam::RoamError::<TransferError>::Indeterminate
                }
                ::roam::RoamError::User(never) => match never {},
            })?;
        let ::roam::WithTracker {
            value: response,
            tracker: schema_tracker,
        } = with_tracker;
        let ret_bytes = match &response.ret {
            ::roam::Payload::PostcardBytes(bytes) => bytes,
            _ => {
                return Err(::roam::RoamError::<TransferError>::InvalidPayload(
                    "response not PostcardBytes".into(),
                ));
            }
        };
        let result: Result<u64, ::roam::RoamError<TransferError>> =
            ::roam::schema_deser::schema_deserialize_response(
                ret_bytes,
                method_id,
                &schema_tracker,
            )
            .map_err(|e| ::roam::RoamError::<TransferError>::InvalidPayload(e.to_string()))?;
        result
    }
}
impl From<::roam::DriverCaller> for BillingClient {
    fn from(caller: ::roam::DriverCaller) -> Self {
        Self::new(caller)
    }
}
